Implementing angular timer

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -101,6 +101,9 @@ html(lang='en',ng-app="anyandgoApp")
     script(src='/components/gsap/src/uncompressed/TweenMax.js')
     script(src='/components/ngFx/dist/ngFx.js')
     script(src='/components/angular-youtube-mb/src/angular-youtube-embed.js')
+    script(src='/components/momentjs/moment.js')
+    script(src='/components/humanize-duration/humanize-duration.js')
+    script(src='/components/angular-timer/dist/angular-timer.js')
     //endbower
     //-<!-- endbuild -->
     - } else {
