--- a/views/index.jade
+++ b/views/index.jade
@@ -34,34 +34,26 @@ block content
       
   .row.our-main-content
     .col-sm-10.col-sm-offset-1
-          
-          .col-sm-8
-            .thumbnail
-              .caption
-                h3 #{__("Install anyandgo")}  
-                pre
-                  code.language-bash $ [sudo] npm install -g anyandgo-cli 
+      div
+        p
+          timer(end-time='1451628000000') {{days}} days, {{hours}} hours, {{minutes}} minutes, {{seconds}} seconds.
+        .thumbnail
+          .caption
+            h3 #{__("Install anyandgo")}  
+            pre
+              code.language-bash $ [sudo] npm install -g anyandgo-cli 
 
-                h3 Create a new project 
-                pre
-                  code.language-bash 
-                  | $ anyandgo init mynewproject
-                  |    You have successfully created the anyandgo project
-                  |    Try:
-                  |         cd mynewproject
-                  |         npm install && bower install && grunt
-                h3 #{__("MEAN Framework")}  
-                div(style="min-height: 100px;")
-                  p Anyandgo let you create blazing fast, scalable web applications using MongoDB, Express, Node.JS and AngularJS. 
-                  a.btn.btn-default(href='/docs', role='button')
-                    i.fa.fa-book(style="padding-right:10px")
-                    | #{__("Read Docs")}
-      
-          .col-sm-4
-            .thumbnail
-              a.hide(href,ng-click="openVideoModal('vF9NKt2UXDU')")
-                img(src='http://img.youtube.com/vi/vF9NKt2UXDU/mqdefault.jpg', alt='video',style="width:700px;height: 170px;")
-              .caption
-                h3 #{__("Components")}
-                  //include components
-
+            h3 Create a new project 
+            pre
+              code.language-bash 
+              | $ anyandgo init mynewproject
+              |    You have successfully created the anyandgo project
+              |    Try:
+              |         cd mynewproject
+              |         npm install && bower install && grunt
+            h3 #{__("MEAN Framework")}  
+            div(style="min-height: 100px;")
+              p Anyandgo let you create blazing fast, scalable web applications using MongoDB, Express, Node.JS and AngularJS. 
+              a.btn.btn-default(href='/docs', role='button')
+                i.fa.fa-book(style="padding-right:10px")
+                | #{__("Read Docs")}
