--- a/views/index.jade
+++ b/views/index.jade
@@ -36,7 +36,8 @@ block content
     .col-sm-10.col-sm-offset-1
       div
         p
-          timer(end-time='1451628000000') {{days}} days, {{hours}} hours, {{minutes}} minutes, {{seconds}} seconds.
+          // moment("23/10/2015 9:00", "D/M/YYYY H:mm").valueOf();
+          timer(end-time='1445569200000') {{days}} days, {{hours}} hours, {{minutes}} minutes, {{seconds}} seconds.
         .thumbnail
           .caption
             h3 #{__("Install anyandgo")}  
