--- a/views/layout.jade
+++ b/views/layout.jade
@@ -36,6 +36,7 @@ html(lang='en',ng-app="anyandgoApp")
     link(rel='stylesheet', href='/components/components-font-awesome/css/font-awesome.css')
     link(rel='stylesheet', href='/components/prism/themes/prism.css')
     link(rel='stylesheet', href='/components/animate.css/animate.css')
+    link(rel='stylesheet', href='/components/ionicons/css/ionicons.css')
     //endbower
     link(rel='stylesheet', href='/components/prism/themes/prism-okaidia.css')
     //-<!-- endbuild -->
@@ -68,7 +69,8 @@ html(lang='en',ng-app="anyandgoApp")
       - }
 
   body.container-fluid
-    include ./partials/site-menu
+    .row
+      include ./partials/site-menu
     block content
     block footer
       include ./partials/site-footer
