--- a/views/partials/site-menu.jade
+++ b/views/partials/site-menu.jade
@@ -1,4 +1,4 @@
-nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
+nav.navbar.navbar-inverse(role='navigation')
   .container-fluid
     .navbar-header
       button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
@@ -10,13 +10,9 @@ nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
         //span(style="display:inline-block;")
           img(src="./img/anyandgo-logo-circle-2.png", style="display:inline-block;height:30px;")
         span(style="display:inline-block;padding-left:10px;")
-        | EmprenDevs
+        | { EmprenDevs }
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       ul.nav.navbar-nav
-        li
-          a(href='/')
-            i.fa.fa-home(style='padding-right:10px') 
-            | Home
         // public:page:menu:start
         li
           a(href='/contact')
