--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -11,8 +11,10 @@ body
   .hammerfont
     font-family: 'Hammersmith One', sans-serif;
     color: #C9CFFE !important;
+  .navbar
+    margin: 0;
   .neck
-    margin: 44px 0 0
+    margin: 0
     padding: 0 
     background-color: #2B2A28
     background-image:url('../img/bg-2-full.jpg');
