--- a/views/layout.jade
+++ b/views/layout.jade
@@ -37,6 +37,7 @@ html(lang='en',ng-app="anyandgoApp")
     link(rel='stylesheet', href='/components/prism/themes/prism.css')
     link(rel='stylesheet', href='/components/animate.css/animate.css')
     link(rel='stylesheet', href='/components/ionicons/css/ionicons.css')
+    link(rel='stylesheet', href='/components/FlipClock/compiled/flipclock.css')
     //endbower
     link(rel='stylesheet', href='/components/prism/themes/prism-okaidia.css')
     //-<!-- endbuild -->
@@ -103,9 +104,9 @@ html(lang='en',ng-app="anyandgoApp")
     script(src='/components/gsap/src/uncompressed/TweenMax.js')
     script(src='/components/ngFx/dist/ngFx.js')
     script(src='/components/angular-youtube-mb/src/angular-youtube-embed.js')
-    script(src='/components/momentjs/moment.js')
-    script(src='/components/humanize-duration/humanize-duration.js')
-    script(src='/components/angular-timer/dist/angular-timer.js')
+    script(src='/components/moment/moment.js')
+    script(src='/components/angular-moment/angular-moment.js')
+    script(src='/components/FlipClock/compiled/flipclock.js')
     //endbower
     //-<!-- endbuild -->
     - } else {
