--- a/views/partials/site-menu.jade
+++ b/views/partials/site-menu.jade
@@ -9,8 +9,9 @@ nav.navbar.navbar-inverse(role='navigation')
       a.navbar-brand.hammerfont(href='/')
         //span(style="display:inline-block;")
           img(src="./img/anyandgo-logo-circle-2.png", style="display:inline-block;height:30px;")
+        i.ion-code-working
         span(style="display:inline-block;padding-left:10px;")
-        | { EmprenDevs }
+        | EmprenDevs
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       ul.nav.navbar-nav
         // public:page:menu:start
