--- a/views/index.jade
+++ b/views/index.jade
@@ -37,7 +37,15 @@ block content
       div
         p
           // moment("23/10/2015 9:00", "D/M/YYYY H:mm").valueOf();
-          timer(end-time='1445569200000') {{days}} days, {{hours}} hours, {{minutes}} minutes, {{seconds}} seconds.
+          timer(end-time='1445569200000')
+          timer(interval='1000', countdown='30', end-time='1445569200000')
+            div {{days}} days, {{hours}} hours, {{minutes}} minutes, {{seconds}} seconds.
+          timer#countdown(interval='1000', countdown='30', end-time='1445569200000')
+            | Remaining time : {{days}} second{{secondsS}} ({{progressBar}}%). Activity? {{displayProgressActive}}
+            div {{days}} days, {{hours}} hours, {{minutes}} minutes, {{seconds}} seconds.
+            .progress.progress-striped(class='{{displayProgressActive}}', style='height: 30px;')
+              .bar(style='min-width: 2em; height: 30px; width: {{progressBar}}%;')
+                | {{ progressBar }}%
         .thumbnail
           .caption
             h3 #{__("Install anyandgo")}  
