--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -8,6 +8,29 @@ body
     height: auto;
   .anyandgo-color
     color: #C9CFFE !important;
+  h1.big-main-logo 
+    font-size: 60px;
+    text-align: center
+    i
+      display: block
+      font-size: 80px;
+      color: #16A085;
+    span
+      display: block
+      b
+        color: #16A085;
+  .con-section-2
+    background: rgb(46, 150, 184);
+  section
+    padding: 60px 30px;
+    min-width: 280px;
+    min-height: 380px;
+  .color-1
+    background: #16A085;
+  .color-2
+    background: #1ABC9C;
+  .color-3
+    background: #EEE;
   .hammerfont
     font-family: 'Hammersmith One', sans-serif;
     color: #C9CFFE !important;
@@ -17,7 +40,7 @@ body
     margin: 0
     padding: 0 
     background-color: #2B2A28
-    background-image:url('../img/bg-2-full.jpg');
+    background-image:url('../img/bg-11-full.jpg');
     background-position: center
     h1
       font-size: 55px;
