--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,7 @@ block content
           i.ion-code-working
           span Empren
             b Devs
+  .arrow-separator.arrow-white
   .row.color-1
     .col-sm-8.col-sm-offset-2
       section.neck-step-2
