--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -311,6 +311,14 @@ body
   content: '';
 }
 
+// Flip Clock 
+.flip-clock-wrapper
+  max-width: 600px
+  margin: 0 auto
+  .flip-clock-label
+    color: #fff
+    font-size: 20px
+
 // https://docs.angularjs.org/api/ng/directive/ngCloak
 // http://stackoverflow.com/questions/12866447/prevent-double-curly-brace-notation-from-displaying-momentarily-before-angular-j
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
@@ -373,6 +381,18 @@ body
   .main-con {
     padding: 0;
   }
+
+  body h1.big-main-logo {
+    font-size: 30px;
+  }
+
+  .neck-step-2 {
+    padding: 60px 0;
+    margin: 0 -5px;
+  }
+  .flip-clock-wrapper {
+    zoom: 0.45;
+  }
 }
 
 // Videos
@@ -397,6 +417,46 @@ body
   width: 100%;
   height: 100%;
   border: 0;
+}
+
+.arrow-separator
+{
+    position: relative;
+}
+
+.arrow-separator:after
+{
+    top: 100%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-width: 12px;
+    left: 50%;
+    margin-left: -12px;
+    z-index: 11;
+}
+
+.arrow-white:after
+{
+    border-color: #FFF rgba(255,255,255,0) rgba(255,255,255,0) rgba(255,255,255,0); /** Using RGB to remove dark line in Firefox **/
+}
+
+.arrow-theme:after
+{
+    border-color: #16A085 rgba(22,160,133,0) rgba(22,160,133,0) rgba(22,160,133,0);
+}
+
+.arrow-themelight:after
+{
+    border-color: #1ABC9C rgba(26,188,156,0) rgba(26,188,156,0) rgba(26,188,156,0);
+}
+
+.arrow-grey:after
+{
+    border-color: #EEE rgba(238,238,238,0) rgba(238,238,238,0) rgba(238,238,238,0);
 }
 
 /* Extra Small Devices, Phones */ 
