--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -313,7 +313,7 @@ body
 
 // Flip Clock 
 .flip-clock-wrapper
-  max-width: 600px
+  max-width: 650px
   margin: 0 auto
   .flip-clock-label
     color: #fff
@@ -391,7 +391,8 @@ body
     margin: 0 -5px;
   }
   .flip-clock-wrapper {
-    zoom: 0.45;
+    max-width: 650px;
+    zoom: 0.4;
   }
 }
 
