--- a/views/index.jade
+++ b/views/index.jade
@@ -8,11 +8,30 @@ block content
           i.ion-code-working
           span Empren
             b Devs
+        p.sub-line.text-center Hackaton para programadores FullStack
   .arrow-separator.arrow-white
   .row.color-1
-    .col-sm-8.col-sm-offset-2
+    .col-sm-12
       section.neck-step-2
-        div(flipclock)
+        .fc-con.animated(flipclock)
+  .arrow-separator.arrow-theme
+  .row.color-2
+    .col-sm-8.col-sm-offset-2
+      section.neck-step-3
+        p Sample
+        p Give Me your e-mail 
+  .arrow-separator.arrow-themelight
+  .row.color-3
+    .col-sm-8.col-sm-offset-2
+      section.neck-step-4
+        p Sample
+        p Give Me your e-mail 
+  .arrow-separator.arrow-grey
+  .row.color-4
+    .col-sm-8.col-sm-offset-2
+      section.neck-step-5
+        p Sample
+        p Give Me your e-mail 
   .row
     .neck
       #main-carousel.carousel.carousel-bg.slide(data-ride='carousel', data-interval="30000", hero)
