--- a/views/partials/site-footer.jade
+++ b/views/partials/site-footer.jade
@@ -1,4 +1,4 @@
-.row(style="background-color: #2b2a28;background-image: url('/img/bg-2-full.jpg');min-height:280px;")
+//.row(style="background-color: #2b2a28;background-image: url('/img/bg-2-full.jpg');min-height:280px;")
   .col-sm-10.col-sm-offset-1.white(style="padding:50px 0;")
     .col-sm-6.col-md-6
       img(src="img/logos/all.png")
