--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -19,10 +19,13 @@ body
       display: block
       b
         color: #16A085;
+  .sub-line
+    color: #999;
+    font-size: 18px;
   .con-section-2
     background: rgb(46, 150, 184);
   section
-    padding: 60px 30px;
+    padding: 45px 30px;
     min-width: 280px;
     min-height: 380px;
   .color-1
@@ -315,6 +318,7 @@ body
 .flip-clock-wrapper
   max-width: 650px
   margin: 0 auto
+  padding-left: 14px
   .flip-clock-label
     color: #fff
     font-size: 20px
@@ -384,6 +388,11 @@ body
 
   body h1.big-main-logo {
     font-size: 30px;
+  }
+
+  body section {
+    padding: 20px 30px;
+    min-height: 280px;
   }
 
   .neck-step-2 {
