Adding more styles

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -70,7 +70,7 @@ html(lang='en',ng-app="anyandgoApp")
       - }
 
   body.container-fluid
-    .row.hide
+    .row
       include ./partials/site-menu
     block content
     block footer
