--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -324,6 +324,14 @@ body
   content: '';
 }
 
+// Sections
+section.animated {
+  -webkit-animation-duration: 5s;
+  animation-duration: 5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
 // Flip Clock 
 .flip-clock-wrapper
   max-width: 650px
