--- a/views/index.jade
+++ b/views/index.jade
@@ -14,6 +14,22 @@ block content
     .col-sm-12
       section.neck-step-2
         .fc-con.animated(flipclock)
+        ul.list-inline.calendar-resume
+          li
+            p
+              i.fa.fa-calendar
+            p 23/10
+            p Kickstart
+          li
+            p 
+              i.fa.fa-calendar
+            p 24/10
+            p Hackaton
+          li
+            p
+              i.fa.fa-calendar
+            p 23/10
+            p Premiación
   .arrow-separator.arrow-theme
   .row.color-2
     .col-sm-8.col-sm-offset-2
