--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -325,17 +325,29 @@ body
 }
 
 // Sections
-section.animated {
+section.animated.fadeIn {
   -webkit-animation-duration: 5s;
   animation-duration: 5s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
 
+// Calendar
+.calendar-resume
+  padding: 30px 0
+  color: #fff
+  text-align: center
+  font-size: 20px
+  li
+    padding: 10px 30px
+  i
+    font-size: 60px
+
+
 // Flip Clock 
 .flip-clock-wrapper
   max-width: 650px
-  margin: 0 auto
+  margin: 10px auto
   padding-left: 14px
   .flip-clock-dot
     background: #16a085
