--- a/views/index.jade
+++ b/views/index.jade
@@ -38,10 +38,19 @@ block content
         p Give Me your e-mail 
   .arrow-separator.arrow-themelight
   .row.color-3
-    .col-sm-8.col-sm-offset-2
-      section.neck-step-4
-        p Sample
-        p Give Me your e-mail 
+    .col-sm-10.col-sm-offset-1
+      section.neck-step-4.auspiciantes-con
+        h2 Auspician
+        ul.list-inline
+          li
+            a(href="http://www.polotecnologico.net/", target="_blank")
+              img(src="./sponsors/logo-polo-tecnologico.png")
+          li
+            a(href="http://emprendedores.la/", target="_blank")
+              img(src="./sponsors/logo-emprendedoresla.png")
+          li
+            a(href="", target="_blank")
+              img(src="./sponsors/logo-gameiq2.png")
   .arrow-separator.arrow-grey
   .row.color-4
     .col-sm-8.col-sm-offset-2
