--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -343,6 +343,11 @@ section.animated.fadeIn {
   i
     font-size: 60px
 
+// Auspiciantes
+.auspiciantes-con
+  img
+    max-width: 200px
+
 
 // Flip Clock 
 .flip-clock-wrapper
