--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,8 @@ block content
           i.ion-code-working
           span Empren
             b Devs
-        p.sub-line.text-center Hackaton para programadores FullStack
+        p.sub-line.text-center 
+          | La primer Hackaton para programadores MEAN FullStack
   .arrow-separator.arrow-white
   .row.color-1
     .col-sm-12
@@ -32,10 +33,23 @@ block content
             p Premiación
   .arrow-separator.arrow-theme
   .row.color-2
-    .col-sm-8.col-sm-offset-2
-      section.neck-step-3
-        p Sample
-        p Give Me your e-mail 
+    .col-sm-10.col-sm-offset-1
+      section.neck-step-3.desafio-con
+        h2 El Desafio
+        p 
+          | Los participantes tendrán 48hs para crear una aplicación web desde cero,
+          | usando las siguientes tecnologías.
+        ul.list-inline.tech
+          li
+            a.tech-anyandgo(href="http://anyandgo.io/", target="_blank")
+          li
+            a.tech-mongo(href="https://www.mongodb.org/", target="_blank")
+          li
+            a.tech-express(href="http://expressjs.com/", target="_blank")
+          li
+            a.tech-angularjs(href="http://angularjs.org/", target="_blank")
+          li
+            a.tech-nodejs(href="https://nodejs.org/", target="_blank")
   .arrow-separator.arrow-themelight
   .row.color-3
     .col-sm-10.col-sm-offset-1
