--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -343,6 +343,30 @@ section.animated.fadeIn {
   i
     font-size: 60px
 
+// Desafio
+.desafio-con
+  color: #fff
+  .tech
+    padding: 10px 0;
+  a
+    height: 120px
+    width: 110px
+    display: inline-block
+    background: url('../sponsors/anyandgo-eq-mean.png') no-repeat;
+    &:hover
+      opacity: 0.9
+  .tech-anyandgo
+    background-position: -17px -12px
+  .tech-mongo
+    background-position: -187px -12px
+  .tech-express
+    background-position: -307px -12px
+  .tech-angularjs
+    background-position: -427px -12px
+  .tech-nodejs
+    background-position: -547px -12px
+    
+
 // Auspiciantes
 .auspiciantes-con
   img
