--- a/views/partials/site-footer.jade
+++ b/views/partials/site-footer.jade
@@ -22,7 +22,7 @@
           a(href='https://github.com/cortezcristian/anyandgo/issues')
             span.sidebar-nav-item-icon.fa.fa-exclamation-triangle
             |                   Issues
-.row(style="padding: 20px 0;background-color: #f8f8f8;")
+//.row(style="padding: 20px 0;background-color: #f8f8f8;")
   .col-sm-12.col-md-12
     p(style="text-align:center; margin:0; padding:0;color: #777;font-size:18px;") 
       i.fa.fa-github(style="padding-right:10px")
