Adding setup and ionicons

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -42,6 +42,7 @@ html(lang='en',ng-app="anyandgoApp")
     link(rel='stylesheet', href='/components/prism/themes/prism-okaidia.css')
     //-<!-- endbuild -->
     - } else {
+    link(rel='stylesheet', href='/components/ionicons/css/ionicons.css')
     link(rel='stylesheet', href='/dist/styles/site-styles.min.css')
     link(rel='stylesheet', href='/components/fontawesome/css/font-awesome.css')
     - }
