--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,22 +10,22 @@ html(lang='en',ng-app="anyandgoApp")
     link(rel='icon', type='image/png', sizes='16x16', href='/favicon-16x16.png')
     block meta
       // for Google
-      meta(name='description', content='')
-      meta(name='keywords', content='')
-      meta(name='author', content='')
+      meta(name='description', content='Compentencia para emprendededores y desarrolladores de software')
+      meta(name='keywords', content='fullstack,mean,devs,desarrollo,emrpendedores')
+      meta(name='author', content='EmprenDevs <contacto@gmail.com>')
       meta(name='copyright', content='')
-      meta(name='application-name', content='')
+      meta(name='application-name', content='EmprenDevs')
       // for Facebook
-      meta(property='og:title', content='')
+      meta(property='og:title', content='EmprenDevs')
       meta(property='og:type', content='article')
-      meta(property='og:image', content='')
-      meta(property='og:url', content='')
-      meta(property='og:description', content='')
+      meta(property='og:image', content='http://emprendevs.com/img/emprendevs.png')
+      meta(property='og:url', content='http://emprendevs.com')
+      meta(property='og:description', content='Compentencia para emprendededores y desarrolladores de software')
       // for Twitter
       meta(name='twitter:card', content='summary')
-      meta(name='twitter:title', content='')
-      meta(name='twitter:description', content='')
-      meta(name='twitter:image', content='')
+      meta(name='twitter:title', content='EmprenDevs')
+      meta(name='twitter:description', content='Compentencia para emprendededores y desarrolladores de software')
+      meta(name='twitter:image', content='http://emprendevs.com/img/emprendevs.png')
     link(href='http://fonts.googleapis.com/css?family=Hammersmith+One',rel='stylesheet',type='text/css')
     - if(settings.envflag !== "production") {
     //-<!-- build:css(public) styles/site-styles.min.css -->
