Adding Linkeding Group

--- a/views/index.jade
+++ b/views/index.jade
@@ -82,6 +82,9 @@ block content
           li
             a(href="mailto:contacto@emprendevs.com", target="_blank")
               i.ion-ios-email-outline
+          li
+            a(href="https://www.linkedin.com/grp/home?gid=8386827", target="_blank")
+              i.ion-social-linkedin
   //.row
     .neck
       #main-carousel.carousel.carousel-bg.slide(data-ride='carousel', data-interval="30000", hero)
