--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,7 +12,7 @@ html(lang='en',ng-app="anyandgoApp")
       // for Google
       meta(name='description', content='Compentencia para emprendededores y desarrolladores de software')
       meta(name='keywords', content='fullstack,mean,devs,desarrollo,emrpendedores')
-      meta(name='author', content='EmprenDevs <contacto@gmail.com>')
+      meta(name='author', content='EmprenDevs <contacto@emprendevs.com>')
       meta(name='copyright', content='')
       meta(name='application-name', content='EmprenDevs')
       // for Facebook
