Adding more features

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,8 +8,14 @@ block content
           i.ion-code-working
           span Empren
             b Devs
-        p.sub-line.text-center 
-          | La primer Hackaton para programadores MEAN FullStack
+        p.sub-line.text-center(style="margin-bottom:35px;") 
+          | 
+          br
+          | La primer hackathon para programadores FullStack
+        p.sub-line.text-center
+          a(href="https://www.google.com.ar/maps/place/Grupo+Polo+Tecnologico+Rosario+S.H./@-32.9474163,-60.6353579,17z/data=!4m6!1m3!3m2!1s0x95b7ab195f405e7d:0xe3d4a9ba0c7fe007!2sGrupo+Polo+Tecnologico+Rosario+S.H.!3m1!1s0x95b7ab195f405e7d:0xe3d4a9ba0c7fe007")
+            i.fa.fa-map-marker.fa-fw
+            | Maipú 835, Polo Tecnológico Rosario
   .arrow-separator.arrow-white
   .row.color-1
     .col-sm-12
@@ -25,7 +31,7 @@ block content
             p 
               i.fa.fa-calendar
             p 24/10
-            p Hackaton
+            p Hackathon
           li
             p
               i.fa.fa-calendar
@@ -35,9 +41,9 @@ block content
   .row.color-2
     .col-sm-10.col-sm-offset-1
       section.neck-step-3.desafio-con
-        h2 El Desafio
+        h2 El Desafío
         p 
-          | Los participantes tendrán 48hs para crear una aplicación web desde cero,
+          | Los participantes tendrán 48 hs. para crear una aplicación web desde cero,
           | usando las siguientes tecnologías.
         ul.list-inline.tech
           li
@@ -50,23 +56,40 @@ block content
             a.tech-angularjs(href="http://angularjs.org/", target="_blank")
           li
             a.tech-nodejs(href="https://nodejs.org/", target="_blank")
+        ul.list-inline.tech
+          li
+            a.tech-famous(href="http://famous.org/", target="_blank")
+          li
+            a.tech-backbone(href="http://backbonejs.org/", target="_blank")
+          li
+            a.tech-reactjs(href="http://facebook.github.io/react/", target="_blank")
+          li
+            a.tech-ionic(href="http://ionicframework.com/", target="_blank")
+          li
+            a.tech-auth0(href="https://auth0.com/", target="_blank")
+          li
+            a.tech-sails(href="http://sailsjs.org/", target="_blank")
+        p.text-center
+          a.button(href="mailto:contacto@emprendevs.com", target="_blank") Sugerir tecnología
   .arrow-separator.arrow-themelight
-  .row.color-3
+  .row.color-4
     .col-sm-10.col-sm-offset-1
       section.neck-step-4.auspiciantes-con
-        h2 Auspician
+        h2 Organizan
         ul.list-inline
           li
             a(href="http://www.polotecnologico.net/", target="_blank")
-              img(src="./sponsors/logo-polo-tecnologico.png")
+              img(src="./sponsors/logo-polo-tecnologico3.png")
           li
             a(href="http://emprendedores.la/", target="_blank")
               img(src="./sponsors/logo-emprendedoresla.png")
+        h2 Sponsors
+        ul.list-inline
           li
-            a(href="", target="_blank")
+            a(href="http://www.gameiq.la", target="_blank")
               img(src="./sponsors/logo-gameiq2.png")
-  .arrow-separator.arrow-grey
-  .row.color-4
+  .arrow-separator.arrow-white
+  .row.color-3
     .col-sm-8.col-sm-offset-2.con-social-networks
       section.neck-step-5
         p.text-center
@@ -85,6 +108,8 @@ block content
           li
             a(href="https://www.linkedin.com/grp/home?gid=8386827", target="_blank")
               i.ion-social-linkedin
+        p.sub-line.text-center
+          | &#8226; Aprendé, construí y divertite &#8226;
   //.row
     .neck
       #main-carousel.carousel.carousel-bg.slide(data-ride='carousel', data-interval="30000", hero)
