--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -385,17 +385,20 @@ section.animated.fadeIn {
   .tech-sails
     background-position: -841px -6px 
   .button
-    display: inline-block
-    border-radius: 5px;
-    background: #fff;
-    color: #1ABC9C;
-    font-size: 30px
+    display: inline-block;
+    border: solid 2px #FFF;
+    background: rgba(0,0,0,0);
+    color: #FFF;
+    font-size: 18px
+    text-transform: uppercase;
     width: 300px
     height: 45px
     line-height: 45px
+    margin-top: 100px;
     &:hover, &:active
-      opacity: 0.9
-      background: #ccc;
+      border: solid 2px #FFF;
+      background: #FFF;
+      color: #1ABC9C;
       text-decoration: none;
 
 // Auspiciantes
