Adding more styles

--- a/views/index.jade
+++ b/views/index.jade
@@ -69,13 +69,92 @@ block content
             a.tech-auth0(href="https://auth0.com/", target="_blank")
           li
             a.tech-sails(href="http://sailsjs.org/", target="_blank")
-
+        
+        h2(style="margin-top:35px;") Que pertenezca a alguna de estas categorías:
+        div.col-sm-10.col-sm-offset-1
+          ul.fa-ul.text-left
+            li
+              i.fa-li.fa.fa-check-circle
+              | Educativas, E-learning, Gestión de Contenidos, Gestión de la Calidad Total
+            li
+              i.fa-li.fa.fa-check-circle
+              | Machine Learning, Inteligencia Artificial, Simulación
+            li
+              i.fa-li.fa.fa-check-circle
+              | E-commerce, Software de Gestión, Finanzas, Fintech, Bitcoins
+            li
+              i.fa-li.fa.fa-check-circle
+              | Social Media, Gamification, Email Marketing, Publicidad
+            li
+              i.fa-li.fa.fa-check-circle
+              | Responsabilidad Social, Concientización, Cuidado del Medio Ambiente
+            li
+              i.fa-li.fa.fa-check-circle
+              | Geolocación, Control de Flota
+            li
+              i.fa-li.fa.fa-check-circle
+              | Productividad, Gestión de Tareas, Herramientas para Desarrolladores, GTD
         p.text-center
           a.button(href="mailto:contacto@emprendevs.com", target="_blank") Sugerir tecnología
   .arrow-separator.arrow-themelight
+  .row.color-1
+    .col-sm-12
+      section.neck-step-4.jurado-con
+        h2 El jurado
+        ul.list-inline
+          li
+            a(href="https://ar.linkedin.com/in/alejandromotta", target="_blank")
+              img.img-circle.img-responsive.center-block(src="img/jurados/amotta-foto.jpg")
+              | Alejandro Motta
+          li
+            a(href="https://ar.linkedin.com/in/yaninaibarra", target="_blank")
+              img.img-circle.img-responsive.center-block(src="img/jurados/yibarra-foto.jpg")
+              | Yanina Ibarra
+          li
+            a(href="https://ar.linkedin.com/in/leandrodichiazza", target="_blank")
+              img.img-circle.img-responsive.center-block(src="img/jurados/dichiazza-foto.jpg")
+              | Leandro Di Chiazza
+          li
+            a(href="https://ar.linkedin.com/in/cortezcristian", target="_blank")
+              img.img-circle.img-responsive.center-block(src="img/jurados/ccortez-foto.jpg")
+              | Cristian Cortez
+  .arrow-separator.arrow-theme
+  .row.color-3
+    .col-sm-8.col-sm-offset-2.criterios-con
+      section.neck-step-5
+        h2 Criterios de evaluación
+        div.col-sm-10.col-sm-offset-1
+          ul.fa-ul.text-left
+            li
+              i.fa-li.fa.fa-lightbulb-o
+              | Factibilidad de concreción, innovación, posibilidad de negocio
+            li
+              i.fa-li.fa.fa-certificate
+              | Buenas prácticas, estándares, performance
+            li
+              i.fa-li.fa.fa-gear
+              | User experience, usabilidad, responsive, comunicación
+            li
+              i.fa-li.fa.fa-paint-brush
+              | Diseño, estética, presentación
+            li
+              i.fa-li.fa.fa-wheelchair
+              | Accesibilidad, plain language
+            li
+              i.fa-li.fa.fa-star-o
+              | Documentación, tests, código, integración continua, coverage
+            li
+              i.fa-li.fa.fa-shield
+              | Seguridad
+            li
+              i.fa-li.fa.fa-file-code-o
+              | Entregables
+        p.text-center
+          a.button(href="mailto:contacto@emprendevs.com", target="_blank") Proponer categoría
+  .arrow-separator.arrow-grey
   .row.color-4
     .col-sm-10.col-sm-offset-1
-      section.neck-step-4.auspiciantes-con
+      section.neck-step-6.auspiciantes-con
         h2 Organizan
         ul.list-inline
           li
@@ -92,7 +171,7 @@ block content
   .arrow-separator.arrow-white
   .row.color-3
     .col-sm-8.col-sm-offset-2.con-social-networks
-      section.neck-step-5
+      section.neck-step-7
         p.text-center
           a.go-up(href="#")
             i.ion-arrow-up-b
