--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -400,6 +400,49 @@ section.animated.fadeIn {
       background: #FFF;
       color: #1ABC9C;
       text-decoration: none;
+  ul.fa-ul > li
+    font-size: 18px;
+    line-height: 26px;
+  
+// Jurado
+.jurado-con
+  color: #fff
+  text-align: center
+  font-size: 20px
+  margin-top: 40px
+  a
+    color: #fff
+    text-decoration: none
+  ul
+    padding-top: 30px
+  li > a > img
+    max-width: 60%
+    
+// Criterios
+.criterios-con
+  text-align: center
+  color: #666
+  h2
+    color: #666
+  .button
+    display: inline-block;
+    border: solid 2px #666;
+    background: rgba(0,0,0,0);
+    color: #666;
+    font-size: 18px
+    text-transform: uppercase;
+    width: 300px
+    height: 45px
+    line-height: 45px
+    margin-top: 100px;
+    &:hover, &:active
+      border: solid 2px #666;
+      background: #666;
+      color: #eee;
+      text-decoration: none;
+  ul.fa-ul > li
+    font-size: 18px;
+    line-height: 26px;
 
 // Auspiciantes
 .auspiciantes-con
