Adding a missing button

--- a/views/index.jade
+++ b/views/index.jade
@@ -118,6 +118,8 @@ block content
             a(href="https://ar.linkedin.com/in/cortezcristian", target="_blank")
               img.img-circle.img-responsive.center-block(src="img/jurados/ccortez-foto.jpg")
               | Cristian Cortez
+        p.text-center
+          a.button(href="mailto:contacto@emprendevs.com", target="_blank") Proponer jurado
   .arrow-separator.arrow-theme
   .row.color-3
     .col-sm-8.col-sm-offset-2.criterios-con
