--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -417,6 +417,22 @@ section.animated.fadeIn {
     padding-top: 30px
   li > a > img
     max-width: 60%
+  .button
+    display: inline-block;
+    border: solid 2px #fff;
+    background: rgba(0,0,0,0);
+    color: #fff;
+    font-size: 18px
+    text-transform: uppercase;
+    width: 300px
+    height: 45px
+    line-height: 45px
+    margin-top: 100px;
+    &:hover, &:active
+      border: solid 2px #fff;
+      background: #fff;
+      color: #16A085;
+      text-decoration: none;
     
 // Criterios
 .criterios-con
