--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -437,9 +437,13 @@ section.animated.fadeIn {
 // Criterios
 .criterios-con
   text-align: center
+  font-size: 20px
+  margin-top: 40px
   color: #666
   h2
     color: #666
+  li > img
+    max-width: 60%
   .button
     display: inline-block;
     border: solid 2px #666;
