--- a/views/index.jade
+++ b/views/index.jade
@@ -69,9 +69,14 @@ block content
             a.tech-auth0(href="https://auth0.com/", target="_blank")
           li
             a.tech-sails(href="http://sailsjs.org/", target="_blank")
-        
-        h2(style="margin-top:35px;") Que pertenezca a alguna de estas categorías:
-        div.col-sm-10.col-sm-offset-1
+        p.text-center
+          a.button(href="mailto:contacto@emprendevs.com", target="_blank") Sugerir tecnología
+  .arrow-separator.arrow-themelight
+  .row.color-1
+    .col-sm-12
+      section.neck-step-4.jurado-con
+        h2 Que pertenezca a alguna de estas categorías:
+        div.col-sm-8.col-sm-offset-2
           ul.fa-ul.text-left
             li
               i.fa-li.fa.fa-check-circle
@@ -94,36 +99,55 @@ block content
             li
               i.fa-li.fa.fa-check-circle
               | Productividad, Gestión de Tareas, Herramientas para Desarrolladores, GTD
-        p.text-center
-          a.button(href="mailto:contacto@emprendevs.com", target="_blank") Sugerir tecnología
-  .arrow-separator.arrow-themelight
-  .row.color-1
-    .col-sm-12
-      section.neck-step-4.jurado-con
+  .arrow-separator.arrow-theme
+  .row.color-3
+    .col-sm-10.col-sm-offset-1.criterios-con
+      section.neck-step-5
         h2 El jurado
         ul.list-inline
           li
-            a(href="https://ar.linkedin.com/in/alejandromotta", target="_blank")
-              img.img-circle.img-responsive.center-block(src="img/jurados/amotta-foto.jpg")
-              | Alejandro Motta
+            img.img-circle.img-responsive.center-block(src="img/jurados/amotta-foto.jpg")
+            | Alejandro Motta
+            ul.list-inline
+              li
+                a(href="https://ar.linkedin.com/in/alejandromotta", target="_blank")
+                  i.fa.fa-linkedin-square.fa-2x
+              li
+                a(href="https://twitter.com/alejandromotta", target="_blank")
+                  i.fa.fa-twitter-square.fa-2x
           li
-            a(href="https://ar.linkedin.com/in/yaninaibarra", target="_blank")
-              img.img-circle.img-responsive.center-block(src="img/jurados/yibarra-foto.jpg")
-              | Yanina Ibarra
+            img.img-circle.img-responsive.center-block(src="img/jurados/yibarra-foto.jpg")
+            | Yanina Ibarra
+            ul.list-inline
+              li  
+                a(href="https://ar.linkedin.com/in/yaninaibarra", target="_blank")
+                  i.fa.fa-linkedin-square.fa-2x
+                li.hide
+                  a(href="#", target="_blank")
+                    i.fa.fa-twitter-square.fa-2x
           li
-            a(href="https://ar.linkedin.com/in/leandrodichiazza", target="_blank")
-              img.img-circle.img-responsive.center-block(src="img/jurados/dichiazza-foto.jpg")
-              | Leandro Di Chiazza
+            img.img-circle.img-responsive.center-block(src="img/jurados/dichiazza-foto.jpg")
+            | Leandro Di Chiazza
+            ul.list-inline
+              li
+                a(href="https://ar.linkedin.com/in/leandrodichiazza", target="_blank")
+                  i.fa.fa-linkedin-square.fa-2x
+              li
+                a(href="https://twitter.com/dzmov", target="_blank")
+                  i.fa.fa-twitter-square.fa-2x
           li
-            a(href="https://ar.linkedin.com/in/cortezcristian", target="_blank")
-              img.img-circle.img-responsive.center-block(src="img/jurados/ccortez-foto.jpg")
-              | Cristian Cortez
+            img.img-circle.img-responsive.center-block(src="img/jurados/ccortez-foto.jpg")
+            | Cristian Cortez
+            ul.list-inline
+              li
+                a(href="https://ar.linkedin.com/in/cortezcristian", target="_blank")
+                  i.fa.fa-linkedin-square.fa-2x
+              li
+                a(href="https://twitter.com/cortezcristian", target="_blank")
+                  i.fa.fa-twitter-square.fa-2x
         p.text-center
           a.button(href="mailto:contacto@emprendevs.com", target="_blank") Proponer jurado
-  .arrow-separator.arrow-theme
-  .row.color-3
-    .col-sm-8.col-sm-offset-2.criterios-con
-      section.neck-step-5
+
         h2 Criterios de evaluación
         div.col-sm-10.col-sm-offset-1
           ul.fa-ul.text-left
@@ -144,15 +168,13 @@ block content
               | Accesibilidad, plain language
             li
               i.fa-li.fa.fa-star-o
-              | Documentación, tests, código, integración continua, coverage
+              | Documentación, tests, código fuente, integración continua, coverage
             li
               i.fa-li.fa.fa-shield
               | Seguridad
             li
               i.fa-li.fa.fa-file-code-o
               | Entregables
-        p.text-center
-          a.button(href="mailto:contacto@emprendevs.com", target="_blank") Proponer categoría
   .arrow-separator.arrow-grey
   .row.color-4
     .col-sm-10.col-sm-offset-1
