--- a/views/index.jade
+++ b/views/index.jade
@@ -103,7 +103,7 @@ block content
   .row.color-3
     .col-sm-10.col-sm-offset-1.criterios-con
       section.neck-step-5
-        h2 El jurado
+        h2 Jurado
         ul.list-inline
           li
             img.img-circle.img-responsive.center-block(src="img/jurados/amotta-foto.jpg")
@@ -149,7 +149,7 @@ block content
           a.button(href="mailto:contacto@emprendevs.com", target="_blank") Proponer jurado
 
         h2 Criterios de evaluación
-        div.col-sm-10.col-sm-offset-1
+        div.col-sm-10.col-sm-offset-2
           ul.fa-ul.text-left
             li
               i.fa-li.fa.fa-lightbulb-o
