--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -439,6 +439,7 @@ section.animated.fadeIn {
   text-align: center
   font-size: 20px
   margin-top: 40px
+  margin-bottom: 40px;
   color: #666
   h2
     color: #666
@@ -454,7 +455,8 @@ section.animated.fadeIn {
     width: 300px
     height: 45px
     line-height: 45px
-    margin-top: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     &:hover, &:active
       border: solid 2px #666;
       background: #666;
