--- a/views/layout.jade
+++ b/views/layout.jade
@@ -29,6 +29,7 @@ html(lang='en',ng-app="anyandgoApp")
     link(href='http://fonts.googleapis.com/css?family=Hammersmith+One',rel='stylesheet',type='text/css')
     - if(settings.envflag !== "production") {
     //-<!-- build:css(public) styles/site-styles.min.css -->
+    link(rel='stylesheet', href='/components/ionicons/css/ionicons.css')
     //bower:css
     link(rel='stylesheet', href='/components/metisMenu/dist/metisMenu.css')
     link(rel='stylesheet', href='/components/angular-toggle-switch/angular-toggle-switch.css')
