--- a/views/index.jade
+++ b/views/index.jade
@@ -99,6 +99,8 @@ block content
             li
               i.fa-li.fa.fa-check-circle
               | Productividad, Gestión de Tareas, Herramientas para Desarrolladores, GTD
+        p.text-center
+          a.button(href="mailto:contacto@emprendevs.com", target="_blank") Proponer Categoría
   .arrow-separator.arrow-theme
   .row.color-3
     .col-sm-10.col-sm-offset-1.criterios-con
@@ -146,7 +148,7 @@ block content
                 a(href="https://twitter.com/cortezcristian", target="_blank")
                   i.fa.fa-twitter-square.fa-2x
         p.text-center
-          a.button(href="mailto:contacto@emprendevs.com", target="_blank") Proponer jurado
+          a.button(href="mailto:contacto@emprendevs.com", target="_blank") Postular Jurado
 
         h2 Criterios de evaluación
         div.col-sm-10.col-sm-offset-2
