--- a/views/index.jade
+++ b/views/index.jade
@@ -192,6 +192,8 @@ block content
           li
             a(href="http://www.gameiq.la", target="_blank")
               img(src="./sponsors/logo-gameiq2.png")
+        p.text-center
+          a.button(href="mailto:contacto@emprendevs.com", target="_blank") ¿Te interesa sponsorear el evento?
   .arrow-separator.arrow-white
   .row.color-3
     .col-sm-8.col-sm-offset-2.con-social-networks
