--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -471,6 +471,23 @@ section.animated.fadeIn {
   text-align: center
   img
     max-width: 200px
+  .button
+    display: inline-block;
+    border: solid 2px #666;
+    background: rgba(0,0,0,0);
+    color: #666;
+    font-size: 18px
+    text-transform: uppercase;
+    width: 400px
+    height: 45px
+    line-height: 45px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    &:hover, &:active
+      border: solid 2px #666;
+      background: #666;
+      color: #eee;
+      text-decoration: none;
 
 // Social Networks
 .con-social-networks
