--- a/views/index.jade
+++ b/views/index.jade
@@ -44,7 +44,7 @@ block content
         h2 El Desafío
         p 
           | Los participantes tendrán 48 hs. para crear una aplicación web desde cero,
-          | usando las siguientes tecnologías.
+          | usando alguna de las siguientes tecnologías.
         ul.list-inline.tech
           li
             a.tech-anyandgo(href="http://anyandgo.io/", target="_blank")
@@ -195,7 +195,7 @@ block content
             a(href="http://www.gameiq.la", target="_blank")
               img(src="./sponsors/logo-gameiq2.png")
         p.text-center
-          a.button(href="mailto:contacto@emprendevs.com", target="_blank") ¿Te interesa sponsorear el evento?
+          a.button(href="mailto:contacto@emprendevs.com", target="_blank") Auspiciar el Evento
   .arrow-separator.arrow-white
   .row.color-3
     .col-sm-8.col-sm-offset-2.con-social-networks
