Adding emprendevs@gmail.com

--- a/views/index.jade
+++ b/views/index.jade
@@ -70,7 +70,7 @@ block content
           li
             a.tech-sails(href="http://sailsjs.org/", target="_blank")
         p.text-center
-          a.button(href="mailto:contacto@emprendevs.com", target="_blank") Sugerir tecnología
+          a.button(href="mailto:emprendevs@gmail.com", target="_blank") Sugerir tecnología
   .arrow-separator.arrow-themelight
   .row.color-1
     .col-sm-12
@@ -100,7 +100,7 @@ block content
               i.fa-li.fa.fa-check-circle
               | Productividad, Gestión de Tareas, Herramientas para Desarrolladores, GTD
         p.text-center
-          a.button(href="mailto:contacto@emprendevs.com", target="_blank") Proponer Categoría
+          a.button(href="mailto:emprendevs@gmail.com", target="_blank") Proponer Categoría
   .arrow-separator.arrow-theme
   .row.color-3
     .col-sm-10.col-sm-offset-1.criterios-con
@@ -148,7 +148,7 @@ block content
                 a(href="https://twitter.com/cortezcristian", target="_blank")
                   i.fa.fa-twitter-square.fa-2x
         p.text-center
-          a.button(href="mailto:contacto@emprendevs.com", target="_blank") Postular Jurado
+          a.button(href="mailto:emprendevs@gmail.com", target="_blank") Postular Jurado
 
         h2 Criterios de evaluación
         div.col-sm-10.col-sm-offset-2
@@ -195,7 +195,7 @@ block content
             a(href="http://www.gameiq.la", target="_blank")
               img(src="./sponsors/logo-gameiq2.png")
         p.text-center
-          a.button(href="mailto:contacto@emprendevs.com", target="_blank") Auspiciar el Evento
+          a.button(href="mailto:emprendevs@gmail.com", target="_blank") Auspiciar el Evento
   .arrow-separator.arrow-white
   .row.color-3
     .col-sm-8.col-sm-offset-2.con-social-networks
@@ -211,7 +211,7 @@ block content
             a(href="https://www.facebook.com/emprendevs", target="_blank")
               i.ion-social-facebook
           li
-            a(href="mailto:contacto@emprendevs.com", target="_blank")
+            a(href="mailto:emprendevs@gmail.com", target="_blank")
               i.ion-ios-email-outline
           li
             a(href="https://www.linkedin.com/grp/home?gid=8386827", target="_blank")
