--- a/views/index.jade
+++ b/views/index.jade
@@ -25,17 +25,17 @@ block content
           li
             p
               i.fa.fa-calendar
-            p 23/10
+            p.highlight 23/10
             p Kickstart
           li
             p 
               i.fa.fa-calendar
-            p 24/10
+            p.highlight 24/10
             p Hackathon
           li
             p
               i.fa.fa-calendar
-            p 25/10
+            p.highlight 25/10
             p Premiación
   .arrow-separator.arrow-theme
   .row.color-2
@@ -77,7 +77,7 @@ block content
       section.neck-step-4.jurado-con
         h2 Que pertenezca a alguna de estas categorías:
         div.col-sm-8.col-sm-offset-2
-          ul.fa-ul.text-left
+          ul.fa-ul.text-left.lista-categorias
             li
               i.fa-li.fa.fa-check-circle
               | Educativas, E-learning, Gestión de Contenidos, Gestión de la Calidad Total
@@ -106,10 +106,10 @@ block content
     .col-sm-10.col-sm-offset-1.criterios-con
       section.neck-step-5
         h2 Jurado
-        ul.list-inline
+        ul.list-inline.lista-jurado
           li
             img.img-circle.img-responsive.center-block(src="img/jurados/amotta-foto.jpg")
-            | Alejandro Motta
+            p.label-n Alejandro Motta
             ul.list-inline
               li
                 a(href="https://ar.linkedin.com/in/alejandromotta", target="_blank")
@@ -119,7 +119,7 @@ block content
                   i.fa.fa-twitter-square.fa-2x
           li
             img.img-circle.img-responsive.center-block(src="img/jurados/yibarra-foto.jpg")
-            | Yanina Ibarra
+            p.label-n Yanina Ibarra
             ul.list-inline
               li  
                 a(href="https://ar.linkedin.com/in/yaninaibarra", target="_blank")
@@ -129,7 +129,7 @@ block content
                     i.fa.fa-twitter-square.fa-2x
           li
             img.img-circle.img-responsive.center-block(src="img/jurados/dichiazza-foto.jpg")
-            | Leandro Di Chiazza
+            p.label-n Leandro Di Chiazza
             ul.list-inline
               li
                 a(href="https://ar.linkedin.com/in/leandrodichiazza", target="_blank")
@@ -139,7 +139,7 @@ block content
                   i.fa.fa-twitter-square.fa-2x
           li
             img.img-circle.img-responsive.center-block(src="img/jurados/ccortez-foto.jpg")
-            | Cristian Cortez
+            p.label-n Cristian Cortez
             ul.list-inline
               li
                 a(href="https://ar.linkedin.com/in/cortezcristian", target="_blank")
