Adding style fixes

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,8 @@ block content
         p.sub-line.text-center(style="margin-bottom:35px;") 
           | 
           br
-          | La primer hackathon para programadores FullStack
+          | La primer hackathon para programadores  
+          i fullstack
         p.sub-line.text-center
           a(href="https://www.google.com.ar/maps/place/Grupo+Polo+Tecnologico+Rosario+S.H./@-32.9474163,-60.6353579,17z/data=!4m6!1m3!3m2!1s0x95b7ab195f405e7d:0xe3d4a9ba0c7fe007!2sGrupo+Polo+Tecnologico+Rosario+S.H.!3m1!1s0x95b7ab195f405e7d:0xe3d4a9ba0c7fe007")
             i.fa.fa-map-marker.fa-fw
@@ -152,7 +153,7 @@ block content
 
         h2 Criterios de evaluación
         div.col-sm-10.col-sm-offset-2
-          ul.fa-ul.text-left
+          ul.fa-ul.text-left.lista-criterios
             li
               i.fa-li.fa.fa-lightbulb-o
               | Factibilidad de concreción, innovación, posibilidad de negocio
