--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -478,7 +478,7 @@ section.animated.fadeIn {
     font-size: 18px;
     line-height: 26px;
 
-.lista-categorias
+.lista-categorias, .lista-criterios
   li
     padding-bottom: 10px;
 
@@ -625,6 +625,15 @@ section.animated.fadeIn {
   .flip-clock-wrapper {
     max-width: 650px;
     zoom: 0.4;
+  }
+
+  .calendar-resume li {
+    font-size: 16px;
+    padding: 10px;
+  }
+
+  .calendar-resume i {
+    font-size: 40px;
   }
 }
 
