--- a/views/index.jade
+++ b/views/index.jade
@@ -42,10 +42,10 @@ block content
   .row.color-2
     .col-sm-10.col-sm-offset-1
       section.neck-step-3.desafio-con
-        h2 El Desafío
-        p 
-          | Los participantes tendrán 48 hs. para crear una aplicación web desde cero,
-          | usando alguna de las siguientes tecnologías.
+        h2 
+          | El Desafío consiste en
+          | construir una aplicación web
+          | usando alguna de las siguientes tecnologías:
         ul.list-inline.tech
           li
             a.tech-anyandgo(href="http://anyandgo.io/", target="_blank")
@@ -72,6 +72,27 @@ block content
             a.tech-sails(href="http://sailsjs.org/", target="_blank")
         p.text-center
           a.button(href="mailto:emprendevs@gmail.com", target="_blank") Sugerir tecnología
+        .col-sm-10.col-sm-offset-1
+          ul.fa-ul.text-left.lista-categorias
+            li
+              i.fa-li.fa.fa-check-circle
+              | La inscripción al evento será gratuita para los participantes 
+            li
+              i.fa-li.fa.fa-check-circle
+              | Los participantes deberán formar equipos de 3 a 5 personas 
+              | y pre-inscribirse a través de esta web durante los 15 días previos al evento  
+            li
+              i.fa-li.fa.fa-check-circle
+              | Los organizadores anunciarán la apertura a dicha inscripción para una cantidad
+              | limitada de equipos
+            li
+              i.fa-li.fa.fa-check-circle
+              | Los equipos tendrán 48 horas a partir del inicio del concurso para crear una aplicación web desde cero
+            li
+              i.fa-li.fa.fa-check-circle
+              | Al finalizar el jurado elegirá a un ganador teniendo en cuenta los criterios de evaluación detallados en las Bases y Condiciones de la Competencia 
+        p.text-center
+          a.button.hide(href="#") Ver Bases y Condiciones
   .arrow-separator.arrow-themelight
   .row.color-1
     .col-sm-12
@@ -90,7 +111,7 @@ block content
               | E-commerce, Software de Gestión, Finanzas, Fintech, Bitcoins
             li
               i.fa-li.fa.fa-check-circle
-              | Social Media, Gamification, Email Marketing, Publicidad
+              | Social Media, Gamification, Email Marketing, Publicidad Online
             li
               i.fa-li.fa.fa-check-circle
               | Responsabilidad Social, Concientización, Cuidado del Medio Ambiente
@@ -99,7 +120,7 @@ block content
               | Geolocación, Control de Flota
             li
               i.fa-li.fa.fa-check-circle
-              | Productividad, Gestión de Tareas, Herramientas para Desarrolladores, GTD
+              | Productividad, Gestión de Tareas, Herramientas para Desarrolladores
         p.text-center
           a.button(href="mailto:emprendevs@gmail.com", target="_blank") Proponer Categoría
   .arrow-separator.arrow-theme
@@ -151,8 +172,8 @@ block content
         p.text-center
           a.button(href="mailto:emprendevs@gmail.com", target="_blank") Postular Jurado
 
-        h2 Criterios de evaluación
-        div.col-sm-10.col-sm-offset-2
+        h2 Criterios de Evaluación
+        div.col-sm-10.col-sm-offset-1
           ul.fa-ul.text-left.lista-criterios
             li
               i.fa-li.fa.fa-lightbulb-o
@@ -174,10 +195,10 @@ block content
               | Documentación, tests, código fuente, integración continua, coverage
             li
               i.fa-li.fa.fa-shield
-              | Seguridad
+              | Seguridad Web, OWASP, Penetration Testing
             li
               i.fa-li.fa.fa-file-code-o
-              | Entregables
+              | Entregables, repositorio, manual de uso, demostración en video
   .arrow-separator.arrow-grey
   .row.color-4
     .col-sm-10.col-sm-offset-1
@@ -195,6 +216,8 @@ block content
           li
             a(href="http://www.gameiq.la", target="_blank")
               img(src="./sponsors/logo-gameiq2.png")
+        h2.hide Premios
+        p.hide Serán revelados muy pronto...
         p.text-center
           a.button(href="mailto:emprendevs@gmail.com", target="_blank") Auspiciar el Evento
   .arrow-separator.arrow-white
