--- a/views/stylus/style.styl
+++ b/views/stylus/style.styl
@@ -396,7 +396,7 @@ section.animated.fadeIn {
     width: 300px
     height: 45px
     line-height: 45px
-    margin-top: 100px;
+    margin: 20px 0
     &:hover, &:active
       border: solid 2px #FFF;
       background: #FFF;
